--- a/src/views/partials/do-answer-disabled.hbs
+++ b/src/views/partials/do-answer-disabled.hbs
@@ -94,7 +94,358 @@
             <button class="button-main-1 mt-5" type="submit"> Save </button>
           </form>
         </div>
+
       </div>
+
+      {{#each answers}}
+
+      <div class="answer-own-question col-md-12">
+        <div class="answer-own-question-header">
+          {{#each user_info}}
+          <div class="header-title row">
+            <div class="col-lg-12">
+              <div class="header-name">
+                {{name}}
+              </div>
+              <div class="header-short_describe">
+                {{short_describe}}
+              </div>
+              <div class="header-short_features">
+
+              </div>
+            </div>
+
+          </div>
+          <div class="body-answer-not-check">
+            <div class="row">
+              <!-- descripción de la respuesta -->
+              <div class="col-md-7 answer-describe">
+                {{{../answer}}}
+              </div>
+              <!-- ratings -->
+              <div class="col-md-4  row rating-block2">
+                <!-- rating block --->
+                <div class="col-md-12">
+
+                  <!-- si el usuario es el mismo que hizo la respuesta no muestra nada si no muestro dependiendo si ya habia calificado la respuesta -->
+                  {{#ifEquals ../user_answer ../../UserId }}
+
+                  {{else}}
+                  <div class="rating-block">
+                    {{#RatingEnabled ../rating_by }}
+                    <h4>Give It a Rating!</h4>
+
+                    {{else}}
+                    <h4>Thanks for rating!</h4>
+                    {{/RatingEnabled}}
+
+                    {{/ifEquals}}
+
+                    {{#ifEquals ../user_answer ../../UserId }}
+
+                    {{else}}
+                    <!-- esto es para formar las estrellas -->
+                    <div class="star-source">
+                      <svg>
+                        <linearGradient x1="50%" y1="5.41294643%" x2="87.5527344%" y2="65.4921875%" id="grad">
+                          <stop stop-color="#FFCC00" offset="0%"></stop>
+                          <stop stop-color="#FFCC00" offset="60%"></stop>
+                          <stop stop-color="#FFCC00" offset="100%"></stop>
+                        </linearGradient>
+                        <symbol id="star" viewBox="153 89 106 108">
+                          <polygon id="star-shape" stroke="url(#grad)" stroke-width="5" fill="currentColor"
+                            points="206 162.5 176.610737 185.45085 189.356511 150.407797 158.447174 129.54915 195.713758 130.842203 206 95 216.286242 130.842203 253.552826 129.54915 222.643489 150.407797 235.389263 185.45085">
+                          </polygon>
+                        </symbol>
+                      </svg>
+
+                    </div>
+
+
+                    {{#RatingEnabled ../rating_by }}
+                     <!-- en el caso que no le haya puesto la nota -->
+                    <div class="star-container ">                    
+                      <input type="radio" name="star" id="5_{{../_id}}"
+                        onClick="addRatingAnswerAjax({{json ../_id}}, 5)">
+                      <label for="5_{{../_id}}">
+                        <svg class="star">
+                          <use xlink:href="#star" />
+                        </svg>
+                      </label>
+                      <input type="radio" name="star" id="4_{{ ../_id}}"
+                        onClick="addRatingAnswerAjax({{json ../_id}}, 4)">
+                      <label for="4_{{../_id}}">
+                        <svg class="star">
+                          <use xlink:href="#star" />
+                        </svg>
+                      </label>
+                      <input type="radio" name="star" id="3_{{ ../_id}}"
+                        onClick="addRatingAnswerAjax({{json ../_id}}, 3)">
+                      <label for="3_{{../_id}}">
+                        <svg class="star">
+                          <use xlink:href="#star" />
+                        </svg>
+                      </label>
+                      <input type="radio" name="star" id="2_{{../_id}}"
+                        onClick="addRatingAnswerAjax({{json ../_id}}, 2)">
+                      <label for="2_{{../_id}}">
+                        <svg class="star">
+                          <use xlink:href="#star" />
+                        </svg>
+                      </label>
+                      <input type="radio" name="star" id="1_{{../_id}}"
+                        onClick="addRatingAnswerAjax({{json ../_id}}, 1)">
+                      <label for="1_{{../_id}}">
+                        <svg class="star">
+                          <use xlink:href="#star" />
+                        </svg>
+                      </label>
+                    </div>
+                    {{else}}
+                      <!-- en el caso que ya le haya puesto nota -->
+                    <div class="stars-content ">
+                     
+                      <div class="stars-content">
+
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          1
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          2
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          3
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          4
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                        <div class="">
+                          {{#isGreater
+                          (ratingUserAVG
+                          ../answerRating.star1
+                          ../answerRating.star2
+                          ../answerRating.star3
+                          ../answerRating.star4
+                          ../answerRating.star5
+                          )
+                          5
+                          }}
+                          <i class="fontawesome-icons fas fa-star star-success" aria-hidden="true"></i>
+                          {{else}}
+                          <i class="fontawesome-icons fas fa-star star-notsuccess" aria-hidden="true"></i>
+                          {{/isGreater}}
+
+                        </div>
+                      </div>
+                    </div>
+                    {{/RatingEnabled}}
+                  </div>
+                  {{/ifEquals}}
+
+                </div>
+
+                <!-- rating breakdown -->
+                <div class="col-md-8 rating-breakdown">
+                  <h4>Rating breakdown</h4>
+                  <div class="rating-bar-answer">
+                    <div class="" style="width:42px; margin-right: 4px; line-height:1;">
+                      <div class="number-detail-rating" style="">5
+                        <i class="fontawesome-icons fa-star" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                    <div class="" style="width:180px;">
+                      <div class="progress" style="height:9px; margin:8px 0;">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="5" aria-valuemin="0"
+                          aria-valuemax="5" style="width: {{percentageAvg
+                          answerRating.star1
+                          answerRating.star2
+                          answerRating.star3
+                          answerRating.star4
+                          answerRating.star5
+                          answerRating.star5}}%">
+                          <span class="sr-only">80% Complete (danger)</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="float-right number-detail-rating-2" >{{#ifExist answerRating.star5}}
+                      {{answerRating.star5}} {{else}} 0 {{/ifExist}} </div>
+                  </div>
+                  <div class="rating-bar-answer">
+                    <div class="" style="width:42px; margin-right: 4px; line-height:1;">
+                      <div class="number-detail-rating" style="">4
+                        <i class="fontawesome-icons fa-star" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                    <div class="" style="width:180px;">
+                      <div class="progress" style="height:9px; margin:8px 0;">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="4" aria-valuemin="0"
+                          aria-valuemax="5" style="width: {{percentageAvg
+                          answerRating.star1
+                          answerRating.star2
+                          answerRating.star3
+                          answerRating.star4
+                          answerRating.star5
+                          answerRating.star4}}%">
+                          <span class="sr-only">80% Complete (danger)</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="float-right number-detail-rating-2" >{{#ifExist answerRating.star4}}
+                      {{answerRating.star4}} {{else}} 0 {{/ifExist}} </div>
+                  </div>
+                  <div class="rating-bar-answer">
+                    <div class="" style="width:42px; margin-right: 4px; line-height:1;">
+                      <div class="number-detail-rating" style="">3
+                        <i class="fontawesome-icons fa-star" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                    <div class="" style="width:180px;">
+                      <div class="progress" style="height:9px; margin:8px 0;">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="3" aria-valuemin="0"
+                          aria-valuemax="5" style="width: {{percentageAvg
+                          answerRating.star1
+                          answerRating.star2
+                          answerRating.star3
+                          answerRating.star4
+                          answerRating.star5
+                          answerRating.star3}}%">
+                          <span class="sr-only">80% Complete (danger)</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="float-right number-detail-rating-2" >{{#ifExist answerRating.star3}}
+                      {{answerRating.star3}} {{else}} 0 {{/ifExist}} </div>
+                  </div>
+                  <div class="rating-bar-answer">
+                    <div class="" style="width:42px; margin-right: 4px; line-height:1;">
+                      <div class="number-detail-rating" style="">2
+                        <i class="fontawesome-icons fa-star" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                    <div class="" style="width:180px;">
+                      <div class="progress" style="height:9px; margin:8px 0;">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="2" aria-valuemin="0"
+                          aria-valuemax="5" style="width:{{percentageAvg
+                          answerRating.star1
+                          answerRating.star2
+                          answerRating.star3
+                          answerRating.star4
+                          answerRating.star5
+                          answerRating.star2}}%">
+                          <span class="sr-only">80% Complete (danger)</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="float-right number-detail-rating-2" style="">{{#ifExist answerRating.star2}}
+                      {{answerRating.star2}} {{else}} 0 {{/ifExist}} </div>
+                  </div>
+                  <div class="rating-bar-answer">
+                    <div class="" style="width:42px; margin-right: 4px; line-height:1;">
+                      <div class="number-detail-rating" style="">1
+                        <i class="fontawesome-icons fa-star" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                    <div class="" style="width:180px;">
+                      <div class="progress" style="height:9px; margin:8px 0;">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="1" aria-valuemin="0"
+                          aria-valuemax="5" style="width: {{percentageAvg
+                          answerRating.star1
+                          answerRating.star2
+                          answerRating.star3
+                          answerRating.star4
+                          answerRating.star5
+                          answerRating.star1}}%">
+                          <span class="sr-only">80% Complete (danger)</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="float-right number-detail-rating-2" style="">{{#ifExist answerRating.star1}}
+                      {{answerRating.star1}} {{else}} 0 {{/ifExist}} </div>
+                  </div>
+                </div>
+                <div class="col-md-4 rating-avg" >
+                  <div class="div">
+                    <h4> Rating Avg</h4>
+                  </div>
+                 
+                  <div class="number-rating-avg">
+                                   <h2 class="number-avg-parcial">   {{ratingUserAVG
+                    answerRating.star1
+                    answerRating.star2
+                    answerRating.star3
+                    answerRating.star4
+                    answerRating.star5
+                    }}<small class="number-avg-total"> /5</small></h2> 
+                  </div>
+                 
+
+                </div> 
+              </div>
+            </div>
+
+          </div>
+          <!-- /container -->
+          {{/each}}
+        </div>
+      </div>
+
+      {{/each}}
     </div>
   </div>
 </div>
