--- a/src/views/admin/transaction-best-answer.hbs
+++ b/src/views/admin/transaction-best-answer.hbs
@@ -18,7 +18,6 @@
             <th>ID Question </th>
             <th>Reward</th>
             <th>paypal email to transfer</th>
-            <th> ID Transaction PayPal</th>
             <th>Update</th>
           </tr>
         </thead>
@@ -33,9 +32,9 @@
             <td>{{paypal_email}} </td>
             {{/each}}
 
-             <td> <input type="text" id="id_transaction_paypal" name="id_transaction_paypal" class="form-control" placeholder="id transaction paypal"
-            maxlength="100" value="" required="required"> </td>
-            <td>  <a href="/admin/update_best_answer/{{_id}}"><button type="button" id="" class="button-main-2">Update</button></a></td>
+            <td>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-transaction" data-idanswer="{{_id}}"  data-idquestion="{{../_id}}" >Update</button>
+            </td>
             {{/each}}
             
            
@@ -46,7 +45,38 @@
 
         </tbody>
       </table>
+<div class="modal fade" id="modal-transaction" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Update Transaction ID</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <form action="/admin/update_best_answer?_method=PUT" id="form1" method="POST" enctype="multipart/form-data">
+          <div class="form-group">
+            <label for="paypal_transaction_id" class="col-form-label">ID Transaction:</label>
+            <input type="text" class="form-control" id="paypal_transaction_id" name="paypal_transaction_id">
+          </div>
+           <div class="form-group">
+            <input class="form-control" id="id_answer" name="id_answer" value="" type="hidden"></input>
+          </div>
+          <div class="form-group">
+            <input class="form-control" id="id_question" name="id_question" value="" type="hidden"></input>
+          </div>
+              <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button  value="Submit" form="form1" class="btn btn-primary" type="submit">Update Transaction </button>
+      </div>
+      </form>
+      </div>
 
     </div>
   </div>
 </div>
+    </div>
+  </div>
+</div>
+
